# seeyoulater

./: .gitignore  Cargo.toml  README.md  seeyoulater.db
cli/: Cargo.toml  build-notes.md  seeyoulater.db
cli/src/: commands.rs  config.rs  db.rs  lib.rs  main.rs  migrations.rs  web.rs
docker/: Dockerfile.aarch64.bullseye
extension/: .gitignore  manifest.json  options.html  options.js  popup.html  popup.js  seeyoulater.js  style.css
extension/fonts/: inter.css
server/: Cargo.toml  default-config.toml
server/src/: commands.rs  lib.rs  main.rs  routes.rs
src/: commands.rs  db.rs  lib.rs  main.rs  web.rs
syl_lib/: Cargo.toml
syl_lib/src/: colors.rs  commands.rs  config.rs  db.rs  lib.rs  tests.rs  util.rs  web.rs
