[package]
name = "syl"
version = "0.1.0"
edition = "2021"
authors = ["Phineas Jensen"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = { version = "3.2.14", features = ["derive"] }
directories = "4.0.1"
itertools = "0.10.3"
quick-xml = "0.23.0"
ureq = "2.5.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
