[package]
name = "syl"
version = "0.1.0"
edition = "2021"
authors = ["Phineas Jensen"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.14", features = ["derive"] }
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0"
syl_lib = { path = "../syl_lib" }
