[package]
name = "syl_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rouille = "3.5.0"
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.10.1"
syl_lib = { path = "../syl_lib" }
urlencoding = "2.1.2"
